[project]
name = "saber"
version = "0.1.0"
description = "Smart Assistant for Better Engineering and Research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.5",
    "streamlit>=1.48.1",
]

[project.scripts]
saber = "saber.app:run"

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "E501",     # line too long
]
